# monitor-client

./: CMakeLists.txt  DeviceInput.cpp  DeviceInput.h  FileOutput.cpp  FileOutput.h  README.md  Upload.cpp  Upload.h  UserWindow.cpp  UserWindow.h  ffmpeg.h  main.cpp
